[project]
name = "FRHEED"
description = "A GUI for real-time RHEED analysis."
authors = [
    { name = "Elliot Young", email = "elliot.young1996@gmail.com" },
]
requires-python = ">=3.10.4, <3.11"  # PySpin only supports up to 3.10
readme = "README.md"
dependencies = [
    "appdirs == 1.4.4",
    "cmapy == 0.6.6",  # TODO(ecyoung3): Replace with own implementation
    "numpy == 1.26.*",
    "opencv-python == 4.9.0.*",
    "PyQt5 == 5.15.*",
    "pyqtgraph == 0.13.*",
    "scipy == 1.13.*",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "mypy == 1.10.*",
    "pytest == 8.2.*",
    "ruff == 0.4.3",
    "uv == 0.1.39",
]
# TODO(ecyoung3): Add requirements for 3rd-part (e.g. FLIR) cameras (maybe use open source, aravis?)

[tool.ruff]
# Increase the line length from the default of 88
line-length = 100

# Always autofix when possible
fix = true

[tool.ruff.lint]
# Specify rules explicitly to avoid configuration drift due to defaults changing
select = [
    "E",  # all pyflakes rules
    "F",  # all pycodestyle rules
    "I",  # all isort rules
]

# Rules to exclude from autofix
unfixable = [
    "F401",  # unused imports
]
