[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FRHEED"
description = "A GUI for real-time RHEED analysis."
license = {file = "LICENSE"}
requires-python = ">=3.10.4, <3.11"  # PySpin only supports up to 3.10
authors = [
    { name = "Elliot Young", email = "elliot.young1996@gmail.com" },
]
readme = "README.md"
keywords = [
    "rheed",
    "gui",
    "pyqt",
    "scientific",
    "imaging",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "appdirs == 1.4.4",
    "cmapy == 0.6.6",  # TODO(ecyoung3): Replace with own implementation
    "numpy == 1.26.*",
    "opencv-python == 4.9.0.*",
    "PyQt5 == 5.15.*",
    "pyqtgraph == 0.13.*",
    "scipy == 1.13.*",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "mypy == 1.10.*",
    "pytest == 8.2.*",
    "ruff == 0.4.3",
    "uv == 0.1.39",
]
# TODO(ecyoung3): Add requirements for 3rd-part (e.g. FLIR) cameras (maybe use open source, aravis?)

[project.urls]
Homepage = "https://github.com/ecyoung3/FRHEED"
Repository = "https://github.com/ecyoung3/FRHEED.git"

[tool.hatch.version]
path = "src/frheed/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frheed"]

[tool.ruff]
# preview = true
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",  # all pyflakes rules
    "F",  # all pycodestyle rules
    "I",  # all isort rules
    # "PLC0415",  # disallow imports outside module top-level scope
]
unfixable = [
    "F401",  # unused imports
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
disallow_untyped_defs = true
warn_return_any = true

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "appdirs",
    "cmapy",
    "PySpin",
    "scipy.*",
]
follow_imports = "silent"
ignore_missing_imports = true
